--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -6,7 +6,7 @@ on:
             - master
     workflow_dispatch: # 手动触发
     schedule:
-        - cron: '5 49 1 * * ? *'
+        - cron: '5 2 * * *'
 jobs:
     build:
         runs-on: ubuntu-latest
